app/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mlflow-deployment 
  namespace: mlflow 
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow 
  template:
    metadata:
      labels:
        app: mlflow 
    spec:
      serviceAccountName: mlflow-sa

      volumes:
      - name: mlflow-data
        persistentVolumeClaim:
          claimName: mlflow-data # reference the PVC
      containers:
      - name: mlflow
        image: akinolawilson/mlflow:latest
        command: ["/usr/src/app/entrypoint.sh"]
        args: ["mlflow", "server", "--host", "0.0.0.0", "--port", "5001", "--default-artifact-root","file:/usr/src/app/data", "--backend-store-uri", "sqlite:////usr/src/app/data/mlflow.db"]
        imagePullPolicy: Always 
        ports:
          - containerPort: 5001
            
        volumeMounts:
        - name: mlflow-data
          mountPath: /usr/src/app/data
