app/mlflow/service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: mlflow-service
  namespace: mlflow
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
    port: 5000
    targetPort: 5001
