app/mlflow/total.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mlflow-deployment 
  namespace: mlflow 
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow 
  template:
    metadata:
      labels:
        app: mlflow 
    spec:
      serviceAccountName: mlflow-sa

      volumes:
      - name: mlflow-data
        hostPath:
          path: /data/

      containers:
      - name: mlflow
        image: akinolawilson/mlflow:latest
        imagePullPolicy: Always 
        ports:
          - containerPort: 5001
            
        volumeMounts:
        - name: mlflow-data
          mountPath: /usr/src/app
---
apiVersion: v1
kind: Service 
metadata:
  name: mlflow-service
  namespace: mlflow
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5001
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
